Bug 445541 - Bottom of settings window is partially hidden behind Plasma panel
Summary: Bottom of settings window is partially hidden behind Plasma panel
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 442093 444466 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-15 16:54 UTC by Patrick Silva
Modified: 2022-03-08 00:57 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
screen recording (1.09 MB, video/webm)
2021-11-15 16:55 UTC, Patrick Silva
Details
2nd screen recording (2.79 MB, video/x-matroska)
2022-03-02 12:43 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-11-15 16:54:21 UTC
SUMMARY
Bottom of settings window is partially hidden behind Plasma panel on 1366x768 screen and the window can not be
vertically resized. Please watch the attached screen recording.

EXPECTED RESULT
Settings window should be entirely visible.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.3
Graphics Platform: X11
Comment 1 Patrick Silva 2021-11-15 16:55:31 UTC
Created attachment 143590 [details]
screen recording
Comment 2 Christoph Cullmann 2022-01-08 21:11:31 UTC
*** Bug 444466 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Cullmann 2022-01-08 21:11:59 UTC
*** Bug 442093 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-03-02 08:47:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/650
Comment 5 Ahmad Samir 2022-03-02 12:05:54 UTC
I imagine it's one of the settings pages that is too high and causing this; if you still experience this issue, could you check which one?
Comment 6 Patrick Silva 2022-03-02 12:43:08 UTC
Created attachment 147241 [details]
2nd screen recording

As we can see in the video attached to this comment, several settings pages are too high.
Comment 7 Ahmad Samir 2022-03-02 12:51:15 UTC
Hmm, those ones are expanding to fill the whole available space, but can be made shorter (most of them); what I meant is a page where the contents fill the whole space, e.g. a page where there is a checkbox at the very bottom of the view, and causes the dialog's minimum size to be bigger than (the screen height - the panel height).
Comment 8 Ahmad Samir 2022-03-02 12:56:42 UTC
If you want to play with it, one idea would be to try running kate with gammaray:
- gammaray kate
- open the settings dialog in kate
- go to the Widgets tab in gammaray and search for kateconfigdialog

that should make it appear in the bottom part of the view in gammaray, you can check the height's, width's ...etc.
Comment 9 Christoph Cullmann 2022-03-02 20:02:51 UTC
https://invent.kde.org/utilities/kate/-/merge_requests/653

This makes all pages scrollable.

Naturally even nicer would be "small" config pages, but I don't think that is easily feasible.
Comment 10 Christoph Cullmann 2022-03-05 10:49:01 UTC
Git commit a7f6d1fe7bcea4225233334b69950e5b80a0159c by Christoph Cullmann.
Committed on 04/03/2022 at 17:46.
Pushed by cullmann into branch 'master'.

make config dialog scrollable

use a similar variant as in KConfigDialog

minimal invasive change

M  +58   -6    kate/kateconfigdialog.cpp
M  +9    -0    kate/kateconfigdialog.h

https://invent.kde.org/utilities/kate/commit/a7f6d1fe7bcea4225233334b69950e5b80a0159c
Comment 11 Christoph Cullmann 2022-03-06 16:23:06 UTC
Git commit bb040ab1352bc39d4bf9945e57885e83ede9fce2 by Christoph Cullmann.
Committed on 06/03/2022 at 16:17.
Pushed by cullmann into branch 'master'.

fix config dialog sizes for KTextEditor

same fixes as for Kate, but for all applications
using the full config dialog from KTextEditor
like KWrite, ...

M  +66   -2    src/utils/kateglobal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/bb040ab1352bc39d4bf9945e57885e83ede9fce2