make config dialog scrollable

use a similar variant as in KConfigDialog

minimal invasive change

BUG: 445541